refactor: minor improvements and fixes in controllers and repositories
- Improve REST controller implementations
- Fix repository adapter implementations
- Update entity relationships